# gegelati-apps-e

./: .gitignore
pendulum/: CMakeLists.txt  README.md  params.json
pendulum/dat/: download_dat.sh
pendulum/python/: plot.py
pendulum/scripts/: data_analysis.ipynb  training.sh
pendulum/src/CodeGen/: mainCodeGenCompile.cpp  mainGenerateCodeGen.cpp  mainInferenceCodeGen.cpp  mainInferenceDot.cpp
pendulum/src/Learn/: instructions.cpp  main.cpp  pendulum.cpp  pendulum.h  pendulumLE.cpp  pendulumLE.h  render.cpp  render.h  tools.cpp  tools.h
